Prevent display of horizontal scroll bar
* Prevent navigation progress from exceeding 100%.

* Hide overflowing invisible player controls elements.

* Contain selection rect of full width content elements in viewport.

* Contain selection rect toolbar of sections in viewport.

--- a/entry_types/scrolled/package/src/frontend/PlayerControls/ControlBar.module.css
+++ b/entry_types/scrolled/package/src/frontend/PlayerControls/ControlBar.module.css
@@ -23,6 +23,7 @@
   width: 100%;
   display: table;
   position: relative;
+  overflow: hidden;
 }
 
 .controlBarContainer.inset {
