--- a/entry_types/scrolled/package/src/frontend/inlineEditing/Toolbar.module.css
+++ b/entry_types/scrolled/package/src/frontend/inlineEditing/Toolbar.module.css
@@ -11,6 +11,10 @@
   opacity: 0.6;
 }
 
+.button:last-child {
+  margin-right: 0;
+}
+
 .button:hover {
   opacity: 1;
 }
